--- a/dash_interface/NAMESPACE
+++ b/dash_interface/NAMESPACE
@@ -1,5 +1,6 @@
 # AUTO GENERATED FILE - DO NOT EDIT
 
-export(MyDashComponents)
-export(scatterplot)
+export(ScatterplotComponent)
 export(myDashComponents)
+export(scatterplot)
+export(scatterplotComponent)
