Implementado plot Pdp com violin

--- a/dash_interface/NAMESPACE
+++ b/dash_interface/NAMESPACE
@@ -1,9 +1,11 @@
 # AUTO GENERATED FILE - DO NOT EDIT
 
 export(HistogramplotComponent)
+export(LinearHistComponent)
 export(LinearplotComponent)
 export(ScatterplotComponent)
 export(histogramplotComponent)
+export(linearHistComponent)
 export(linearplotComponent)
 export(myDashComponents)
 export(scatterplot)
