--- a/ipywidgets-ts/package.json
+++ b/ipywidgets-ts/package.json
@@ -49,15 +49,17 @@
     "watch:labextension": "jupyter labextension watch ."
   },
   "dependencies": {
-    "@jupyter-widgets/base": "^1.1.10 || ^2 || ^3 || ^4 || ^5 || ^6"
+    "@jupyter-widgets/base": "^1.1.10 || ^2 || ^3 || ^4 || ^5 || ^6",
+    "d3": "^7.8.5"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
     "@babel/preset-env": "^7.5.0",
     "@jupyter-widgets/base-manager": "^1.0.2",
-    "@jupyterlab/builder": "^3.0.0",
+    "@jupyterlab/builder": "^4.0.6",
     "@lumino/application": "^1.6.0",
     "@lumino/widgets": "^1.6.0",
+    "@types/d3": "^7.4.1",
     "@types/jest": "^26.0.0",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
